src/objects/Admission_INQ__c.object
<CustomObject>
    <description>Admission INQ</description>
    <fields>
        <fullName>Mob_no__c</fullName>
        <description>Mob no</description>
        <label>Mob no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parents_Name__c</fullName>
        <description>Parents Name</description>
        <label>Parents Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <description>Student Name</description>
        <label>Student Name</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Admission INQ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INQ-{0000}</displayFormat>
        <label>Admission INQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission INQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>